--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
 <head>
     <title>sekiro 소개</title>
     <meta charset="utf-8">
+    <style>
+        a{text-decoration: none;
+        color: black;}
+        h1{text-align: center;
+            border-bottom:1px solid gray;
+      margin:0;
+      padding:20px;}
+      ol{
+      border-right:1px solid gray;
+      width:100px;
+      margin:0;
+      padding:20px;
+    }
+        .saw{color: gray;}
+        .active{color: red;}
+    </style>
 </head>
 <body>
     <h1><a href="index.html">Sekiro™ Shadows Die Twice</a></h1>
-    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA4MTZfMTY4%2FMDAxNTY1OTM0MTYxODI2.aVWefNcgkVcslyI5c63YIF0emerXimpZ6bUjY2EGjssg.BFlN0ba8V3JbriANLfMdhyhF680t9sIYOg-KKyNNFiAg.JPEG.nir7303%2F%25BA%25ED%25B7%25CE%25B1%25D7%25B4%25EB%25B9%25AE%25BB%25E7%25C1%25F8.JPG&type=sc960_832" width="450" height="200">
     <ol>
-        <li><a href="1.html">게임을 만든 회사</a></li>
-        <li><a href="2.html">게임의 특징</a></li>
+        <li><a href="1.html" class="saw">게임을 만든 회사</a></li>
+        <li><a href="2.html" class="saw active">게임의 특징</a></li>
         <li><a href="3.html">이 게임사의 다른 게임</a></li>
     </ol>
 <h2></h2>
